--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "UNLICENSED",
   "dependencies": {
     "@remotion/cli": "4.0.77",
+    "@remotion/transitions": "^4.0.77",
     "@remotion/zod-types": "4.0.77",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
